<resources>
    <string name="app_name">Wimetrix Endline</string>
    <string name="stm">STM:</string>
    <string name="color">Color:</string>
    <string name="lot">Cut Job Code:</string>
    <string name="size">Size:</string>
    <string name="bundle">Bundle:</string>
    <string name="submit">Submit</string>
    <string name="view_dhu">View DHU Report</string>
    <string name="bundle_selection_scan_bundle_card">Bundle Selection / Scan Bundle Card</string>
    <string name="line">Line:</string>
    <string name="logo">Logo</string>
    <string name="style">Style:</string>
    <string name="quantity">Quantity:</string>
    <string name="select_fault">Select Fault:</string>
    <string name="select_operation">Select Operation:</string>
    <string name="operator">Operator:</string>
    <string name="fault_submission">Fault Submission</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="set_ip">SET IP</string>
    <string name="po_number">Production Order:</string>
    <string-array name="lines">
        <item>Sample Name</item>
        <item>Sample Name</item>
        <item>Sample Name</item>
        <item>Sample Name</item>
    </string-array>
</resources>
