<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    android:padding="60dp"
    tools:context=".Singup_Activity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_above="@+id/userinfolayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        />

    <LinearLayout
        android:id="@+id/userinfolayout"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user_black_icon"
            android:drawablePadding="25dp"
            android:fontFamily="@font/futura_hv_bt_heavy"
            android:hint="@string/username"
            android:textSize="25sp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="25dp"
            android:fontFamily="@font/futura_hv_bt_heavy"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userinfolayout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/signinbtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:fontFamily="@font/futura_hv_bt_heavy"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/setIp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bluecheckbuttonbackground"
            android:fontFamily="@font/futura_hv_bt_heavy"
            android:text="@string/set_ip"
            android:textColor="#fff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura_hv_bt_light"
            android:padding="20dp"
            android:text=""
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>