<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".Fault_Submission_Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tabcolor"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tv_header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/logo" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text="@string/po_number"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_po"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLength="10"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text=""
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text="@string/color"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_color"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLength="10"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text=""
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text="@string/style"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text=""
                android:maxLength="10"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text="@string/size"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:maxLength="10"
                android:text=""
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text="@string/lot"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_cut"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:maxLength="10"
                android:text=""
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text="@string/bundle"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_bundle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:maxLength="10"
                android:text=""
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text="@string/quantity"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_bundle_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:maxLength="3"
                android:text=""
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingTop="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="100dp"
                android:paddingRight="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/futura_hv_bt_heavy"
                    android:paddingTop="0dp"
                    android:text="@string/fault_submission"
                    android:textColor="#428831"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/item_top_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futura_hv_bt_heavy"
                        android:text="@string/select_fault"
                        android:textColor="#428831"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="6">

                        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                            android:id="@+id/fault_spinner"
                            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/futura_hv_bt_heavy" />

                        <com.travijuu.numberpicker.library.NumberPicker
                            android:id="@+id/number_picker"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            app:min="1"
                            android:fontFamily="@font/futura_hv_bt_light"
                            android:visibility="gone" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/item_top_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futura_hv_bt_heavy"
                        android:text="@string/select_operation"
                        android:textColor="#428831"
                        android:textSize="20sp" />

                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                        android:id="@+id/operation_spinner"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:fontFamily="@font/futura_hv_bt_heavy" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/item_top_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futura_hv_bt_heavy"
                        android:text="@string/operator"
                        android:textColor="#428831"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_operator"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:fontFamily="@font/futura_hv_bt_heavy"
                        android:gravity="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/submitbtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/futura_hv_bt_heavy"
                    android:text="@string/submit"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fault_history_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp">

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>