<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".Bundle_Selection_Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tabcolor"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tv_header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/logo" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text="@string/line"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_Line"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text=""
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="20sp" />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingTop="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="100dp"
            android:paddingRight="100dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:paddingTop="0dp"
                android:text="@string/bundle_selection_scan_bundle_card"
                android:textColor="#428831"
                android:textStyle="bold"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/item_top_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futura_hv_bt_heavy"
                    android:text="@string/po_number"
                    android:textColor="#428831"
                    android:textSize="20sp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_po"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:dropDownSelector="@color/colorPrimaryDark"
                    android:fontFamily="@font/futura_hv_bt_heavy" />
            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:visibility="gone"-->
<!--                android:paddingTop="@dimen/item_top_padding">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:fontFamily="@font/futura_hv_bt_heavy"-->
<!--                    android:text="@string/color"-->
<!--                    android:textColor="#428831"-->
<!--                    android:textSize="20sp" />-->

<!--                <com.toptoche.searchablespinnerlibrary.SearchableSpinner-->
<!--                    android:id="@+id/spinner_color"-->
<!--                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:dropDownSelector="@color/colorPrimaryDark"-->
<!--                    android:fontFamily="@font/futura_hv_bt_heavy" />-->
<!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/item_top_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futura_hv_bt_heavy"
                    android:text="@string/lot"
                    android:textColor="#428831"
                    android:textSize="20sp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_lot"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/futura_hv_bt_heavy"/>
            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:visibility="gone"-->
<!--                android:paddingTop="@dimen/item_top_padding">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:fontFamily="@font/futura_hv_bt_heavy"-->
<!--                    android:text="@string/size"-->
<!--                    android:textColor="#428831"-->
<!--                    android:textSize="20sp" />-->

<!--                <com.toptoche.searchablespinnerlibrary.SearchableSpinner-->
<!--                    android:id="@+id/spinner_size"-->
<!--                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:fontFamily="@font/futura_hv_bt_heavy"/>-->
<!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/item_top_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futura_hv_bt_heavy"
                    android:text="@string/bundle"
                    android:textColor="#428831"
                    android:textSize="20sp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_bundle"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/futura_hv_bt_heavy"/>
            </LinearLayout>

            <Button
                android:id="@+id/submitbtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/roundedbutton"
                android:fontFamily="@font/futura_hv_bt_heavy"
                android:text="@string/submit"
                android:textColor="#fff" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>